--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
     <title></title>
 </head>
 <body>
+
+    <select id="cur_from"></select>
+    <select id="cur_to"></select>
+
+    <script src="/js/app.js"></script>
+
 </body>
 </html>
