Load currency list via AJAX call to the freecurrencyconverterapi.com

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <select id="cur_from"></select>
     <select id="cur_to"></select>
 
+    <script src="/js/ajax.js"></script>
     <script src="/js/app.js"></script>
 
 </body>
