Get and display currency rate via AJAX call to API

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <select id="cur_from"></select>
     <select id="cur_to"></select>
+    <button id="btn_convert" type="button">Convert</button>
+    <h5 id="result"></h5>
 
     <script src="/js/ajax.js"></script>
     <script src="/js/app.js"></script>
