Convert the user given amount

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 </head>
 <body>
 
+    <input id="amount" type="text" value="" placeholder="amount to convert">
     <select id="cur_from"></select>
     <select id="cur_to"></select>
     <button id="btn_convert" type="button">Convert</button>
-    <h5 id="result"></h5>
+    <h3 id="result"></h3>
 
     <script src="/js/ajax.js"></script>
     <script src="/js/app.js"></script>
