--- a/index.html
+++ b/index.html
@@ -2,15 +2,60 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/app.css">
+
 </head>
 <body>
 
-    <input id="amount" type="text" value="" placeholder="amount to convert">
-    <select id="cur_from"></select>
-    <select id="cur_to"></select>
-    <button id="btn_convert" type="button">Convert</button>
-    <h3 id="result"></h3>
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="toolbar">
+        <div class="container">
+            <div class="navbar-header">
+                <img src="/img/app60.png" class="pull-left col-xs-offset-1" alt="">
+                <a class="navbar-brand" href="#">Currency Converter</a>
+            </div>
+        </div>
+    </nav>
+
+    <div class="jumbotron">
+
+        <form role="form">
+
+            <div class="form-group">
+                <div class="row">
+                    <input id="amount" class="col-xs-12 form-control" type="number" value="1" placeholder="amount to convert">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="row">
+                    <div class="col-xs-5">
+                        <select id="cur_from" class="form-control"></select>
+                    </div>
+                    <div class="col-xs-2 lead"> to </div>
+                    <div class="col-xs-5">
+                        <select id="cur_to" class="form-control"></select>
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="row">
+                    <button id="btn_convert" type="button" role="button" class="btn btn-success form-control col-xs-12">Convert</button>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="row well well-sm">
+                    <h2 id="result" class="text-center"></h2>
+                </div>
+            </div>
+
+        </form>
+
+    </div>
 
     <script src="/js/ajax.js"></script>
     <script src="/js/app.js"></script>
